force-app/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>A purchase order, often abbreviated to PO, is a commercial document issued by a buyer to a seller, indicating types, quantities, and agreed prices for products or services required. Purchase Orders are used to control the purchasing of products and services from external suppliers.</description>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>