force-app/main/default/objects/Purchase_Order__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Purchase Order has been approved.</description>
    <inlineHelpText>Indicate whether or not this purchase order is approved.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>