force-app/main/default/objects/Purchase_Order__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A short description of the goods or services being purchased.</description>
    <inlineHelpText>Enter a short description of the goods or services being purchased.</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>