force-app/main/default/objects/Purchase_Order__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>The total cost of the goods or services being purchased.</description>
    <inlineHelpText>Enter the total cost of the goods or services being purchased.</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>