force-app/main/default/objects/Purchase_Order__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The vendor providing the goods, services, or subscriptions being purchased.</description>
    <inlineHelpText>Select the vendor from whom you&apos;re purchasing goods, services, or subscriptions.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>