force-app/main/default/objects/Purchase_Order__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>The Account Name of the Vendor used for the Purchase Order. Primarily used to render the vendor&apos;s name in Flows related to the Purchase_Order__c object.</description>
    <formula>Vendor__r.Name</formula>
    <label>Vendor Name</label>
    <type>Text</type>
</CustomField>