force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Vendor__c</columns>
    <columns>Total_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>